# zephyr-rp

./: .gitmodules  README.rst
drivers/: CMakeLists.txt  Kconfig
drivers/pmp/: CMakeLists.txt  pmp.c
drivers/sprav/: CMakeLists.txt  Kconfig  boot.S  gen_attestation_key_loader.py  sprav.c  sprav_configure_pmp.S  sprav_heap.c  sprav_template.c
drivers/sprav/attestation_keys/: dilithium2.key
include/zephyr/arch/riscv/common/: linker.ld
include/zephyr/arch/riscv/sprav/: boot.S  linker.ld
include/zephyr/drivers/: pmp.h  sprav.h
samples/pmp/: CMakeLists.txt  sample.yaml
samples/pmp/src/: main.c
samples/sprav/: CMakeLists.txt  prj.conf  sample.yaml  sprav_wrappers.h
samples/sprav/src/: main.c
soc/riscv/esp32c3/: linker.ld  loader.c
soc/riscv/riscv-privilege/common/: vector.S
soc/riscv/riscv-privilege/virt/: linker.ld
